Prevent SSR popup from jumping outside screen with a tether constraint parameter

--- a/public/src/theme/popovers.less
+++ b/public/src/theme/popovers.less
@@ -517,6 +517,9 @@
 .go-to-pricing-in-progress td.net-price span {
   pointer-events: none;
 }
+.pnr-services-form-popover.drop-open {
+  max-width: calc(100% - 85px) !important;
+}
 .pnr-services-form {
   overflow-x: auto;
   .section-switch > .sections > * {
@@ -571,7 +574,7 @@
   td {
     padding: 2px;
   }
-  input, select {
+  input, select, button {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: black;
   }
